2020-05-29         [RELEASE] Release of social_gdpr 1.0.4 (Nicole Cordes)
2020-05-29 1a5feea [FEATURE] Add functional test for play button path (Nicole Cordes)
2020-05-29 a941ba7 [TASK] Use correct namespace for test classes (Nicole Cordes)
2020-05-29 e614cfa [BUGFIX] Use ImageViewHelper instead of ResourceViewHelper (Nicole Cordes)

2020-05-26         [RELEASE] Release of social_gdpr 1.0.3 (Nicole Cordes)
2020-05-26 8eb31d5 [BUGFIX] Allow video urls without scheme (Nicole Cordes)

2020-05-06         [RELEASE] Release of social_gdpr 1.0.2 (Nicole Cordes)
2020-05-06 50c9cdd [TASK] Format CSS file (Nicole Cordes)
2020-05-06 a4a4695 [FEATURE] improve responsiveness (Franz Kugelmann)

2020-05-06         [RELEASE] Release of social_gdpr 1.0.1 (Nicole Cordes)
2020-05-06 d416c82 [BUGFIX] Use absolute path for play buttons (Nicole Cordes)
2020-05-05 103556f [BUGFIX] Fix German language labels (Nicole Cordes)
2020-05-05 1057cdc [BUGFIX] Downgrade Javascript to ES 5.1 (Nicole Cordes)

2020-05-04         [RELEASE] Release of social_gdpr 1.0.0 (Nicole Cordes)
2020-04-30 6bcfbe4 [FEATURE] Add unit test for VimeoHandler (Nicole Cordes)
2020-04-30 906d994 [FEATURE] Add Vimeo handler (Nicole Cordes)
2020-04-30 5b0e0d2 [BUGFIX] Catch response errors in YoutubeImageService (Nicole Cordes)
2020-04-30 4839935 [FEATURE] Raise TYPO3 dependencies to include 9.5 and 10.4 (Nicole Cordes)
2020-04-30 1f5cd1a [FEATURE] Add unit test for YoutubeHandler (Nicole Cordes)
2020-04-30 c81e3ad [BUGFIX] Improve regular expression in YoutubeHandler (Nicole Cordes)
2020-04-29 9a5d8ee [FEATURE] Replace embetty-server-php with own YouTube service (Nicole Cordes)

2020-04-29         [RELEASE] Release of social_gdpr 0.1.0 (Nicole Cordes)
2020-04-28 07163d9 [FEATURE] Add YouTube handler (Nicole Cordes)
2020-04-27 f1deeb6 [FEATURE] Register TypoScriptFrontendController hook (Nicole Cordes)
2020-04-24 69ecebd [TASK] Add basic extension files (Nicole Cordes)